--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "date-fns": "^2.28.0",
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "use-dark-mode": "^2.3.1"
   },
   "devDependencies": {
     "@types/node": "17.0.4",
