--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "styled-components": "^5.3.5",
+    "tinacms": "^0.66.9",
     "use-dark-mode": "^2.3.1"
   },
   "devDependencies": {
