--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "react-dom": "^17.0.2",
     "styled-components": "^5.3.5",
     "tinacms": "^0.66.9",
-    "use-dark-mode": "^2.3.1"
+    "use-dark-mode": "^2.3.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/node": "17.0.4",
     "@types/react": "17.0.38",
+    "@types/uuid": "^8.3.4",
     "autoprefixer": "^10.4.0",
     "postcss": "^8.4.5",
     "prettier": "^2.5.1",
